[gd_scene load_steps=13 format=3 uid="uid://3hy6m5pfj00u"]

[ext_resource type="Script" path="res://basic/scripts/BasicPong.gd" id="1_1rmem"]
[ext_resource type="PackedScene" uid="uid://8ak8bcftfwne" path="res://basic/objects/EnemyPaddle.tscn" id="1_g4qjc"]
[ext_resource type="PackedScene" uid="uid://bhtb6nmuscrgn" path="res://basic/objects/PlayerPaddle.tscn" id="1_sniby"]
[ext_resource type="PackedScene" uid="uid://ltm6nslif50k" path="res://basic/objects/Ball.tscn" id="3_e1v6x"]
[ext_resource type="Script" path="res://basic/scripts/BallObstacle.gd" id="4_cdyof"]
[ext_resource type="AudioStream" uid="uid://slve1w0ky36m" path="res://basic/audio/Interactions/sfx_sounds_interaction2.wav" id="6_swtet"]
[ext_resource type="AudioStream" uid="uid://cvxx2hgaiq73h" path="res://basic/audio/Interactions/sfx_sounds_interaction12.wav" id="7_s14nb"]
[ext_resource type="AudioStream" uid="uid://c7r4pmva20epb" path="res://basic/audio/Positive Sounds/sfx_sounds_powerup7.wav" id="8_ri65l"]
[ext_resource type="AudioStream" uid="uid://dlb5eoh5wo1p0" path="res://basic/audio/Negative Sounds/sfx_sounds_error2.wav" id="9_7bbgi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_45j6l"]
size = Vector2(859, 20)

[sub_resource type="Gradient" id="Gradient_53d60"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lvx30"]
gradient = SubResource("Gradient_53d60")

[node name="BasicPong" type="Node2D"]
script = ExtResource("1_1rmem")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="EnemyPaddle" parent="." instance=ExtResource("1_g4qjc")]
position = Vector2(350, 0)

[node name="PlayerPaddle" parent="." instance=ExtResource("1_sniby")]
position = Vector2(-350, 0)
disable_mode = 2

[node name="Ball" parent="." instance=ExtResource("3_e1v6x")]
unique_name_in_owner = true
disable_mode = 2

[node name="Walls" type="Node2D" parent="."]

[node name="Ceiling" type="Area2D" parent="Walls"]
position = Vector2(0, -272)
script = ExtResource("4_cdyof")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Ceiling"]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_45j6l")

[node name="BallImpactSound" type="AudioStreamPlayer" parent="Walls/Ceiling"]
stream = ExtResource("6_swtet")
volume_db = -20.0

[node name="Floor" type="Area2D" parent="Walls"]
position = Vector2(0, 275)
script = ExtResource("4_cdyof")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Floor"]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_45j6l")

[node name="BallImpactSound" type="AudioStreamPlayer" parent="Walls/Floor"]
stream = ExtResource("7_s14nb")
volume_db = -20.0

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(1.09272, 2)
scale = Vector2(3.24852, 508)
texture = SubResource("GradientTexture1D_lvx30")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="UI/Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 50

[node name="PlayerScore" type="Label" parent="UI/Control/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "0"

[node name="MarginContainer2" type="MarginContainer" parent="UI/Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="CPUScore" type="Label" parent="UI/Control/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerScoreSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_ri65l")
volume_db = -20.0

[node name="CPUScoreSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_7bbgi")
volume_db = -20.0

[connection signal="area_entered" from="Walls/Ceiling" to="Walls/Ceiling" method="_on_area_entered"]
[connection signal="area_entered" from="Walls/Floor" to="Walls/Floor" method="_on_area_entered"]
